add features: change square, reset board, current player turn\; slight update to css

--- a/index.html
+++ b/index.html
@@ -14,22 +14,31 @@
   </header>
 
   <div class="main">
+
     <div class="board">
       <div class="row">
-        <div class="cell">1</div>
-        <div class="cell">2</div>
-        <div class="cell">3</div>
+        <div class="cell blank"></div>
+        <div class="cell blank"></div>
+        <div class="cell blank"></div>
       </div>
       <div class="row">
-        <div class="cell">4</div>
-        <div class="cell">5</div>
-        <div class="cell">6</div>
+        <div class="cell blank"></div>
+        <div class="cell blank"></div>
+        <div class="cell blank"></div>
       </div>
       <div class="row">
-        <div class="cell">7</div>
-        <div class="cell">8</div>
-        <div class="cell">9</div>
+        <div class="cell blank"></div>
+        <div class="cell blank"></div>
+        <div class="cell blank"></div>
       </div>
+    </div>
+
+    <div class = "options">
+
+      <ul>
+        <li><button id="reset">Reset</button></li>
+        <li>Player Turn: </li>
+        <li id="turn">X</li>
     </div>
   </div>
 </body>
